k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certstore-backend
  namespace: karpatilabor
  labels:
    app: certstore-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certstore-backend
  template:
    metadata:
      labels:
        app: certstore-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/zolmen/gde-alkfet/backend:bdd0447b18192572e8342e07b4394dff926ecef2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: certstore-backend
  namespace: karpatilabor
spec:
  selector:
    app: certstore-backend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
